--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="icon" href="./ico.png" type="image/png">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:ital@1&display=swap" rel="stylesheet">
 	<style type="text/css">
 	  @media screen and (max-width: 400px){
     .container{
@@ -16,25 +19,30 @@
 </head>
 <body>
 	<div class="container">
+		<div class="formcontainer">
 		<img class="logo" src="./jjsis.png">
 		<br>
 		<h1>Sua Segurança em Primeiro Lugar!</h1>
 		<br>
 	<div class="redes">
-	<a href="https://api.whatsapp.com/send?phone=5575991521506&text=Ola!">
 		<img class="redesimg" src="./whatsapp.png">
-		<h3 class="edit">(75)99152-1506</h3>
+		<br>
+		<a href="https://api.whatsapp.com/send?phone=5575991521506&text=Ola!">
+		<button class="wpp" class="button" style="vertical-align:middle"><span>Nosso Whatsapp! </span></button>
 	</a>
 	<br>
-	<a href="https://instagram.com/jacksonmota20?igshid=YmMyMTA2M2Y=">
 		<img class="redesimg" src="./instagram.png">
-		<h3 class="edit2">@jacksonmota20</h3>
+		<br>
+		<a href="https://instagram.com/jacksonmota20?igshid=YmMyMTA2M2Y=">
+		<button class="insta" class="button" style="vertical-align:middle"><span>Nosso Instagram! </span></button>
 	</a>
 	<br>
 	    <img class="redesimg" src="google-maps.png">
 	    <a href="https://maps.app.goo.gl/gkcSAfFwD5wPzxJS7">
-	    <button class="botao" type="button">Onde Estamos!</button>
+	    	<br>
+	    <button class="button" style="vertical-align:middle"><span>Venha nos Visitar! </span></button>
 	    </a> 
+</div>
 </div>
 
 	</div>
